# tauri-plugin-ntb

./: Cargo.toml  README.md  build.rs  package.json  rollup.config.js
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte  style.css
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: TitleBar.svelte  common.ts  index.ts  models.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: double_click_title_bar.toml  drag.toml  get_drag_behavior.toml  get_title_bar_css.toml  get_window_control_image.toml  get_window_controls.toml  hide_snap_overlay.toml  is_maximized.toml  middle_click_title_bar.toml  minimize.toml  move_by.toml  right_click_title_bar.toml  toggle_maximize.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
src/css/: linux.css  windows.css
