[package]
name = "tauri-plugin-ntb"
version = "1.0.0"
authors = ["Efdhruhfuwvy"]
description = "A Tauri plugin for custom title bars"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-ntb"
license = "MIT"

[dependencies]
tauri = { version = "2.9.2" }
serde = "1.0"
thiserror = "2"

[target.'cfg(target_os = "linux")'.dependencies]
dconf_rs = "0.3.0"
regex = "1.12.2"
homedir = "0.3.5"
linicon = "2.3.0"
xml_dom = "0.2.8"
gvdb = "0.9.0"
zvariant = "5.8.0"

[target.'cfg(target_os = "windows")'.dependencies]
enigo = "0.6.1"

[build-dependencies]
tauri-plugin = { version = "2.5.1", features = ["build"] }
